# sudoku-solver-opencv

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  sudoku_solver_visual.py
backend/api/: app.py  schemas.py  service.py  sudoku_solver_visual.py
backend/tests/: conftest.py  test_api_endpoints.py  test_schemas.py  test_service.py
old/: app.py  requirements.txt  sudoku_engine.py
old/static/styles/: mainpage.css
old/templates/: result.html
templates/: failed.html  index.html  result.html
